<resources>
    <string name="app_name">ROLLapp</string>
    <string name="losuj_k4">Losuj K4</string>
    <string name="losuj_k6">Losuj K6</string>
    <string name="losuj_k8">Losuj K8</string>
    <string name="losuj_k10">Losuj K10</string>
    <string name="losuj_k12">Losuj K12</string>
    <string name="losuj_k20">Losuj K20</string>
    <string name="losuj_k100">Losuj K100</string>
    <string name="Liczba">Liczba</string>
    <string name="Losuj">Losuj</string>
    <string name="title_activity_dane_postaci">danePostaci</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>