<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Losuj"
        android:layout_width="255dp"
        android:layout_height="169dp"
        android:layout_marginTop="96dp"
        android:text="@string/Losuj"
        android:textAlignment="center"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="48sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/losuj_k6"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/losuj_k8"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/button20"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="164dp"
        android:text="@string/losuj_k20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:text="@string/losuj_k10"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginBottom="164dp"
        android:text="@string/losuj_k12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:text="@string/losuj_k4"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button100"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginBottom="72dp"
        android:text="@string/losuj_k100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>